2005-01-04    <layer@OOB2>

	* makefile: use 7.0

2004-09-27    <layer@OOB2>

	* makefile: use 7.0.pre-final
	* renpics.cl: support S1 IS; build on 7.0

2003-02-27  Kevin Layer  <layer@relay.known.net>
1.6 public release

	* (REMOVED) buildit.bat
	* (REMOVED) isntall.sh
	* makefile: src-dist and dist work
	* renpics.cl: move location of exif-utils 
	* renpics.txt: add stuff
	* buildit.cl: output to `renpics' not `dist'

2003-02-26  Kevin Layer  <layer@relay.known.net>

	* (NEW) makefile
	* renpics.cl: add copyright
	* renpics.txt: update

2002-12-27    <layer@OOB2>

	* buildit.cl: don't install renpics.rc; rename init function
	* renpics.cl: rename init function

2002-12-26    <layer@OOB2>

	* buildit.cl: break on warnings, misc
	* renpics.cl: remove old settings for image startup; exifdump
	renamed to exifinfo; remove unused code

2002-10-17    <layer@OOB2>

	* (NEW) renpics.txt
	* buildit.bat: 6.0 -> 6.2
	* buildit.cl: for 6.2
	* renpics.cl: add -c/-f command line arguments; better usage; add
	some more cameras

2000-12-31    <layer@OOB>

	* checked into cvs
